# Operating-Organism

./: .cursorrules  .gitignore  AUTHORS  BAREMETAL_STANDARD.md  CONTRIBUTING.md  KERNEL.EFI  Makefile  OO_ORGAN_CATALOG.md  README.md  SHA256SUMS-demo-stories110M-xz.txt  SHA256SUMS-demo-stories110M.txt  _check_img.sh  _check_img2.sh  _make_stubs.sh  _oo_check.sh  apply_signature.ps1  copilot-instructions.md  oo-build.ps1  oo-launch-swarm.ps1  oo-launch.ps1  oo-mesh-join.ps1  oo-run.ps1  oo-setup-heartbeat-watch.ps1  oo-workspace.code-workspace  qemu_wsl_output.txt  run-m19.ps1  run-oo-sim-lab.ps1  run.ps1  rust-toolchain.toml  test-qemu-autorun.ps1  test-qemu-diop.ps1  test-qemu-sia.ps1  test-qemu-smoke.ps1  test-qemu.ps1  train_and_deploy.ps1  update_image_ebs.sh
USB-BOOT-FILES/: NvVars  llmk-autorun.txt  oo.cfg  startup.nsh
artifacts/: baremetal_structure_report.json  baremetal_structure_report.md
bot-baremetal/: BOT_MANIFESTE.md  Makefile  NvVars  PROGRESS.md  README.md  test-qemu.ps1
bot-baremetal/immune/: Cargo.toml  test_uefi.efi
bot-baremetal/immune/src/: boot_watch.rs  chameleon.rs  fs_watch.rs  honey_trap.rs  kernel_watch.rs  lib.rs  mem_watch.rs  net_watch.rs  neutralizer.rs  proc_watch.rs  quarantine.rs  regen.rs  swarm_mind.rs  swarm_mind_main.rs  swarm_tests.rs  test_uefi.rs
colony-server/: Cargo.toml  README.md  test_mesh.py
colony-server/deploy/systemd/: README.md  colony-server.service  install-colony-service.sh
colony-server/src/: main.rs  models.rs  storage.rs
control-planes/: Makefile
data/: organism_identity.json  organism_state.json  (+1 more)
(+191 files in other folders)
